--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "draft-js": "^0.9.1",
+    "draft-js-export-html": "^0.5.1",
     "node-sass": "^3.10.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-dropzone": "^3.7.3",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.6",
