--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "draft-js-export-html": "^0.5.1",
     "node-sass": "^3.10.1",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.3.2",
     "react-dropzone": "^3.7.3",
     "react-redux": "^4.4.5",
