--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
   },
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "react-router": "4.0.0-2",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
