--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^5.0.2",
     "react-router": "4.0.0-2",
     "redux": "^3.6.0",
+    "redux-immutable-state-invariant": "^1.2.4",
     "redux-thunk": "^2.2.0",
     "styled-components": "^1.4.1"
   },
