--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "bootstrap": "3",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "4.0.0-2",
