--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "react-router": "4.0.0-2",
+    "react-router-dom": "next",
     "redux": "^3.6.0",
     "redux-immutable-state-invariant": "^1.2.4",
     "redux-thunk": "^2.2.0",
