--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "bootstrap": "3",
+    "draft-js": "^0.10.0",
+    "draft-js-export-html": "^0.5.2",
     "history": "^4.5.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
+    "react-dropzone": "^3.9.2",
     "react-redux": "^5.0.2",
     "react-router-dom": "next",
     "redux": "^3.6.0",
