--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.9.2",
+    "react-helmet": "^5.0.3",
     "react-redux": "^5.0.2",
     "react-router-dom": "next",
     "redux": "^3.6.0",
